# findex

./: CMakeLists.txt  LICENSE
resources/: qml.qrc
resources/js/: file-style.js  utils.js  view.js
resources/qml/: AboutWindow.qml  FindexFooter.qml  FindexGridView.qml  FindexListView.qml  FindexLogView.qml  FindexMenuBar.qml  FindexSettingMenu.qml  FindexTitleBar.qml  main.qml
resources/translations/: findex_zh_CN.ts
src/: CMakeLists.txt  main.cpp
src/controller/: SearchController.cpp  SearchController.h
src/model/: FileMonitor.cpp  FileMonitor.h  SearchModel.cpp  SearchModel.h
